# rev

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml
contracts/: .env.example  .gitignore  foundry.toml
contracts/broadcast/Deploy.s.sol/5042002/: run-latest.json
contracts/broadcast/Deploy.s.sol/84532/: run-1777983340418.json  run-1778031994990.json
contracts/broadcast/TestTransfer.s.sol/5042002/: run-latest.json
contracts/script/: Deploy.s.sol  TestTransfer.s.sol
contracts/src/: ERC2771Context.sol  ExampleGaslessToken.sol  GaslessNFT.sol  GaslessToken.sol  MinimalForwarder.sol
contracts/src/libraries/: ECDSA.sol
contracts/test/: Forwarder.t.sol  MinimalForwarder.t.sol
docs/: ERC712_ERC2771_DEEP_DIVE.md  USAGE.md
erc721-minter/: Cargo.toml
erc721-minter/src/: main.rs
gas-relayer/: .env.example  Cargo.toml  Dockerfile  config.yaml
gas-relayer/migrations/: 001_initial.sql
gas-relayer/src/: main.rs
gas-relayer/src/crypto/: eip712.rs  mod.rs
gas-relayer/src/db/entities/: api_key.rs  banned_user.rs  project.rs  relay_job.rs
gas-relayer/src/handlers/: auth.rs  mod.rs  relay.rs
gas-relayer/src/services/: nonce_manager.rs  policy.rs  queue.rs  relay_executor.rs
src/: main.rs
src/config/: mod.rs
src/crypto/: eip712.rs  key_manager.rs
src/db/: mod.rs
src/db/entities/: business.rs  gas_tank.rs  gas_usage.rs  mod.rs  relayer_nonce.rs  relayer_wallet.rs  spending_limit.rs
src/handlers/: projects.rs  relay.rs
src/migration/: m20250101_000001_create_schema.rs  mod.rs
src/models/: mod.rs
src/services/: mod.rs  nonce_manager.rs  policy.rs  queue.rs  relay_executor.rs
ui/: Dockerfile  nuxt.config.ts  package.json
ui/app/: app.config.ts  app.vue
ui/app/assets/css/: main.css
ui/app/components/: ConnectButton.vue  Footer.vue  Header.vue
ui/app/composables/: useApi.ts  useAuth.ts  useSafe.ts
ui/app/config/: appkit.ts
ui/app/layouts/: default.vue
ui/app/lib/: config.ts
ui/app/pages/: docs.vue  index.vue  settings.vue  tanks.vue
ui/app/pages/projects/: [id].vue  index.vue
ui/app/plugins/: 1.vue-query.ts  2.wagmi.ts
ui/app/stores/: useAuthStore.ts
