[package]
name = "erc721-minter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", default-features = false, features = ["full", "reqwest-rustls-tls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
